# gen-ed25-keypair

./: README.md  config.nix  default.nix  gen-ed25-keypair.cabal  release.nix  stack.yaml
app/: GenKeyPair.hs  SignKeyPair.hs  VerifySig.hs
nix/: shell.nix
test/: Spec.hs
